# src/Generated/Model/ProjectResource.php
@@ -1,0 +1,61 @@
+<?php
+
+namespace Datenkraft\Backbone\Client\FrontendApi\Generated\Model;
+
+class ProjectResource
+{
+    /**
+     * Project Id
+     *
+     * @var string
+     */
+    protected $projectId;
+    /**
+     * Project name
+     *
+     * @var string
+     */
+    protected $name;
+    /**
+     * Project Id
+     *
+     * @return string
+     */
+    public function getProjectId() : string
+    {
+        return $this->projectId;
+    }
+    /**
+     * Project Id
+     *
+     * @param string $projectId
+     *
+     * @return self
+     */
+    public function setProjectId(string $projectId) : self
+    {
+        $this->projectId = $projectId;
+        return $this;
+    }
+    /**
+     * Project name
+     *
+     * @return string
+     */
+    public function getName() : string
+    {
+        return $this->name;
+    }
+    /**
+     * Project name
+     *
+     * @param string $name
+     *
+     * @return self
+     */
+    public function setName(string $name) : self
+    {
+        $this->name = $name;
+        return $this;
+    }
+}
